[gd_scene load_steps=8 format=3 uid="uid://d4glay4qb2jn3"]

[ext_resource type="Texture2D" uid="uid://duqaotr8gsx1r" path="res://assets/textures/Wizard.png" id="1_lydxd"]
[ext_resource type="Script" path="res://scripts/ui/dialogue.gd" id="1_rv8is"]

[sub_resource type="Animation" id="Animation_d0x47"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Bg/HBoxContainer/Text:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Bg:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_o6vn4"]
resource_name = "end"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Bg:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_sq8j2"]
resource_name = "start"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Bg:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_whpp8"]
resource_name = "talk"
length = 10.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Bg/HBoxContainer/Text:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 10),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ycgax"]
_data = {
"RESET": SubResource("Animation_d0x47"),
"end": SubResource("Animation_o6vn4"),
"start": SubResource("Animation_sq8j2"),
"talk": SubResource("Animation_whpp8")
}

[node name="Dialogue" type="Control"]
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_rv8is")

[node name="Bg" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -255.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0.215686, 0.215686, 0.215686, 0.552941)

[node name="Name" type="RichTextLabel" parent="Bg"]
layout_mode = 0
offset_top = -45.0
offset_right = 250.0
bbcode_enabled = true
text = "[font_size=26][center]Wizard[/center][/font_size]"
fit_content = true

[node name="HBoxContainer" type="HBoxContainer" parent="Bg"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Headshot" type="TextureRect" parent="Bg/HBoxContainer"]
layout_mode = 2
texture = ExtResource("1_lydxd")
expand_mode = 2

[node name="Text" type="RichTextLabel" parent="Bg/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
visible_characters = 0
visible_ratio = 0.0

[node name="AnimPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ycgax")
}

[node name="DelayTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="animation_finished" from="AnimPlayer" to="." method="_on_anim_player_animation_finished"]
[connection signal="timeout" from="DelayTimer" to="." method="_on_delay_timer_timeout"]
